✨ feat(user-service): Enhance user and department management features
- Introduced new entities for Team and Role, along with their respective repositories and services.
- Added comprehensive request and response payloads for user and team management.
- Implemented new endpoints for managing user roles and teams, improving overall user management capabilities.
- Refactored existing user entity to accommodate new relationships and attributes.
- Updated application configuration and database migration scripts to support new features.

This update enhances the user management system, providing better organization and functionality for team and role management. ✅